# xl2word

./: .gitignore  PLAN.md  README.md  SKILL.md  SPEC.md  pyproject.toml
Rev7_input-output/: JASxIBC_P-1000_Rev7.layout.json  JASxIBC_P-1000_Rev7_INPUT.xlsx  JASxIBC_P-1000_Rev7_OUTPUT.docx
tests/: conftest.py  test_cleaners.py  test_cli.py  test_docx_write.py  test_extract.py  test_fit.py  test_integration.py  test_layout.py  test_model.py  test_render.py  test_verify.py
xl2word/: __init__.py  cleaners.py  cli.py  docx_write.py  extract.py  fit.py  layout.py  model.py  render.py  verify.py
